
[package]
name = "bunlink"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
dotenv = "0.15.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = "0.3.19"

# Using sqlx with SQLite support
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "macros"] }
asterisk-ami = "0.1.7"
